--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <h3>Our Mission</h3>
         <p>To preserve and share the wonders of the ocean’s depths through scientific discovery and cultural storytelling, connecting visitors with the mysteries hidden beneath the waves.</p>
       </div>
-      <div class="col info-box" style="width: 33.33%;">
+        <div class="col info-box">
         <h3>Explore the Collections</h3>
         <p>From ancient navigation tools and fossilized sea life to enchanting legends of mermaids and sea monsters, our collections span fact and folklore.</p>
       </div>
-      <div class="col info-box" style="width: 33.33%;">
+        <div class="col info-box">
         <h3>Meet Our Staff</h3>
         <p>Learn from expert archaeologists, anthropologists, and cultural interpreters who bring the ocean’s stories to life through research and storytelling.</p>
       </div>
@@ -53,7 +53,7 @@
         <footer>
           <p><strong>The content on this site was conceived by a human and created by AI. The images were created by AI and curated, edited, reviewed, verified, validated, and augmented by a human.</strong></p>
         </footer>
-      </div>
+        </div>
     </div>
   </div>
 </body>
