--- a/html/collections.html
+++ b/html/collections.html
@@ -16,7 +16,7 @@
         <nav class="site-nav">
           <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="../html/staff.html">Staff</a></li>
+            <li><a href="staff.html">Staff</a></li>
             <li><a href="collections.html" class="active">Collections</a></li>
           </ul>
         </nav>
@@ -24,25 +24,220 @@
     </div>
 
     <div class="row collections-nav-row">
-  <div class="col">
-    <nav class="collections-nav">
-      <ul>
-        <li><a href="#" class="collections-btn">Archaeology</a></li>
-        <li><a href="#" class="collections-btn">Anthropology</a></li>
-        <li><a href="#" class="collections-btn">Histories</a></li>
-      </ul>
-    </nav>
+      <div class="col">
+        <nav class="collections-nav">
+          <ul>
+            <li><a href="#" class="collections-btn" onclick="showSection('archaeology')">Archaeology</a></li>
+            <li><a href="#" class="collections-btn" onclick="showSection('anthropology')">Anthropology</a></li>
+            <li><a href="#" class="collections-btn" onclick="showSection('histories')">Histories</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+
+    <section id="archaeology" class="collection-section">
+      <h2 class="section-title">Archaeology Collection</h2>
+
+      <div class="artifact-container">
+   <div class="artifact-header">
+    <h3>Sunken Navigator’s Disk</h3>
+  </div>
+  <div class="artifact-image">
+    <img src="../images/collections/navigator-disk.jpg" alt="A weathered bronze disk with nautical markings, half-buried in seabed silt">
+  </div>
+  <div class="artifact-columns">
+    <div class="artifact-col">
+      <p><strong>Material:</strong> Bronze alloy with traces of gold inlays.</p>
+      <p><strong>Size/Weight/Shape:</strong> Circular, 15 cm diameter, 3 cm thick; weighs approx. 1.2 kg.</p>
+      <p><strong>Physical Properties:</strong> Bronze surface is heavily oxidized, showing a green patina with traces of gold inlay. The disk feels solid and dense, with rough edges and  		smooth etching on its face.</p>
+      <p><strong>Estimated Age:</strong> Circa 1200 CE, estimated via contextual dating and material corrosion.</p>
+      <p><strong>Preservation State:</strong> Partial; corrosion obscures some details, but symbols and etchings remain.</p>
+    </div>
+    <div class="artifact-col">
+      <p><strong>Location Found:</strong> Atlantic Ocean near Azores (38.5°N, 28.0°W); buried in shipwreck hold.</p>
+      <p><strong>Likely Purpose:</strong> Navigation or ritual tool, possibly astrolabe-like instrument used at sea.</p>
+      <p><strong>Evidence of Use:</strong> Etching worn along outer edges; signs of frequent handling or rotation.</p>
+      <p><strong>Manufacture Clues:</strong> Lathed grooves, stamped iconography, and hand-scratched runes.</p>
+    </div>
+    <div class="artifact-col">
+      <p><strong>Found With:</strong> Ceramic amphorae, rusted anchor fragments, and copper wire loops.</p>
+      <p><strong>Burial or Habitat Context:</strong> Within collapsed wooden cargo container, embedded in compacted silt.</p>
+      <p><strong>Symbolism:</strong> Central glyph resembles sunburst surrounded by wave symbols; may represent celestial navigation.</p>
+      <p><strong>Comparison:</strong> Similar in shape to Byzantine astrolabes but with hybrid elements.</p>
+    </div>
   </div>
 </div>
+<div class="artifact-container">
+  <div class="artifact-header">
+    <h3>Ceremonial Trident Head</h3>
+  </div>
+  <div class="artifact-image">
+    <img src="../images/collections/trident-head.jpg" alt="An ornate bronze trident head with ceremonial engravings">
+  </div>
+  <div class="artifact-columns">
+    <div class="artifact-col">
+      <p><strong>Material:</strong> Bronze with embedded quartz and coral inlays.</p>
+      <p><strong>Size/Weight/Shape:</strong> 40 cm long, trident-shaped, approx. 2.8 kg.</p>
+      <p><strong>Physical Properties:</strong> Metallic surface with slight greenish oxidation; coral and quartz inlays are still visible, with a smooth texture along the shaft and pitted 		areas near the prongs.</p>
+      <p><strong>Estimated Age:</strong> 9th century BCE, possibly Phoenician origin.</p>
+      <p><strong>Preservation State:</strong> Well-preserved with some oxidation and minor pitting.</p>
+    </div>
+    <div class="artifact-col">
+      <p><strong>Location Found:</strong> Submerged temple ruins, off the coast of Cyprus (35.1°N, 33.2°E).</p>
+      <p><strong>Likely Purpose:</strong> Used in ceremonial rituals or as a symbol of maritime power.</p>
+      <p><strong>Evidence of Use:</strong> Polishing along grip; residue of organic materials.</p>
+      <p><strong>Manufacture Clues:</strong> Cast bronze, later engraved with religious iconography.</p>
+    </div>
+    <div class="artifact-col">
+      <p><strong>Found With:</strong> Coral jewelry, clay idols, and an offering bowl.</p>
+      <p><strong>Burial or Habitat Context:</strong> Partially buried in silt inside temple chamber.</p>
+      <p><strong>Symbolism:</strong> Three-prong shape possibly symbolized control over sea, sky, and land.</p>
+      <p><strong>Comparison:</strong> Similar ceremonial tridents found in Minoan ruins, though smaller.</p>
+    </div>
+  </div>
+</div>
+<div class="artifact-container">
+  <div class="artifact-header">
+    <h3>Wavecarved Horn of the Depths</h3>
+  </div>
+  <div class="artifact-image">
+    <img src="../images/collections/wave-horn.jpg" alt="Ancient ceremonial conch horn with ornate wave carvings">
+  </div>
+  <div class="artifact-columns">
+    <div class="artifact-col">
+      <p><strong>Material:</strong> Polished conch shell reinforced with copper bands and inlaid with turquoise.</p>
+      <p><strong>Size/Weight/Shape:</strong> Spiraled shell, approx. 35 cm long, weighs 1.5 kg.</p>
+      <p><strong>Physical Properties:</strong> Smooth, polished surface with natural spiral ridges; turquoise inlays glimmer faintly under light. Marine growth and minor coral deposits 		adhere to the lower shell edges.</p>
+      <p><strong>Estimated Age:</strong> Circa 600 BCE, based on stratigraphic dating and barnacle encrustation.</p>
+      <p><strong>Preservation State:</strong> Excellent; marine growth present but acoustic chamber intact.</p>
+    </div>
+    <div class="artifact-col">
+      <p><strong>Location Found:</strong> Within sunken galley near Crete (35.2°N, 25.1°E), surrounded by ritual items.</p>
+      <p><strong>Likely Purpose:</strong> Ceremonial horn used for summoning or signaling during oceanic rites.</p>
+      <p><strong>Evidence of Use:</strong> Lip and rim show signs of prolonged blowing and contact wear.</p>
+      <p><strong>Manufacture Clues:</strong> Intricate wave motifs carved with metal tools; copper seal at mouthpiece.</p>
+    </div>
+    <div class="artifact-col">
+      <p><strong>Found With:</strong> Bronze mirrors, engraved sea-stone amulets, and tattered linen shrouds.</p>
+      <p><strong>Burial or Habitat Context:</strong> Resting beside a scroll and driftwood planks in a collapsed ship cabin.</p>
+      <p><strong>Symbolism:</strong> Spiral shape and wave carvings represent cycles of tides and sea spirits.</p>
+      <p><strong>Comparison:</strong> Shares features with South Pacific ceremonial conch horns, but with distinct Hellenistic embellishments.</p>
+    </div>
+  </div>
+</div>
+</section>
 
+<section id="anthropology" class="collection-section" style="display: none;">
+  <h2 class="section-title">Anthropology Collection</h2>
 
-    <div class="row">
-      <div class="col" id="footer" style="width: 100%;">
-        <footer>
-          <p><strong>The content on this site was conceived by a human and created by AI. The images were created by AI and curated, edited, reviewed, verified, validated, and augmented by a human.</strong></p>
-        </footer>
+  <div class="artifact-container">
+    <div class="artifact-header">
+      <h3>Ancient Submerged Mask</h3>
+    </div>
+    <div class="artifact-image">
+      <img src="../images/collections/ancient-submerged-mask.jpg" alt="An aged ritual mask encrusted with algae, recovered from underwater ruins">
+    </div>
+    <div class="artifact-columns">
+      <div class="artifact-col">
+        <p><strong>Material:</strong> Carved driftwood with seaweed fiber accents and fishbone inlays.</p>
+        <p><strong>Size/Weight/Shape:</strong> Oval, approx. 30 cm tall, 20 cm wide, 1.1 kg.</p>
+        <p><strong>Physical Properties:</strong> Surface is rough and waterworn, with softened edges and visible algae encrustation. Fiber accents are brittle but largely intact, and  			fishbone inlays retain a faint sheen.</p>
+        <p><strong>Estimated Age:</strong> Circa 1100 CE, aged via carbon dating and material wear.</p>
+        <p><strong>Preservation State:</strong> Algae-covered surface, but carvings remain visible beneath layers.</p>
+      </div>
+      <div class="artifact-col">
+        <p><strong>Location Found:</strong> Submerged ritual site near Micronesia (6.9°N, 158.2°E).</p>
+        <p><strong>Likely Purpose:</strong> Ceremonial use in oceanic ancestor worship or rites of passage.</p>
+        <p><strong>Evidence of Use:</strong> Strap marks and discoloration suggest frequent wearing during rituals.</p>
+        <p><strong>Manufacture Clues:</strong> Hand-carved with obsidian tools, decorated with local sea life materials.</p>
+      </div>
+      <div class="artifact-col">
+        <p><strong>Found With:</strong> Woven baskets, stone figurines, and shell instruments.</p>
+        <p><strong>Burial or Habitat Context:</strong> Discovered in a sea cave altar beneath coral overhang.</p>
+        <p><strong>Symbolism:</strong> Mask features wave and spiral carvings representing the cycle of tides and spirits.</p>
+        <p><strong>Comparison:</strong> Similar to Polynesian and Melanesian ceremonial masks with marine motifs.</p>
       </div>
     </div>
   </div>
+
+  <div class="artifact-container">
+    <div class="artifact-header">
+      <h3>Submerged Tribal Necklace</h3>
+    </div>
+    <div class="artifact-image">
+      <img src="../images/collections/tribal-necklace.jpg" alt="An ancient ceremonial necklace made of shells, bones, and fibers, encrusted with algae and sediment">
+    </div>
+    <div class="artifact-columns">
+      <div class="artifact-col">
+        <p><strong>Material:</strong> Bone fragments, shells, braided sea plant fibers.</p>
+        <p><strong>Size/Weight/Shape:</strong> Crescent-shaped, 35 cm length, approx. 0.4 kg.</p>
+        <p><strong>Physical Properties:</strong> Rough and porous texture from calcification; bone surfaces are matte and brittle, while shell beads have dulled iridescence with algae 			staining the fiber bindings.</p>
+        <p><strong>Estimated Age:</strong> 900–1100 CE, based on fiber degradation and shell erosion.</p>
+        <p><strong>Preservation State:</strong> Algae-covered and partially calcified; structure remains intact.</p>
+      </div>
+      <div class="artifact-col">
+        <p><strong>Location Found:</strong> Submerged tribal shrine near Papua New Guinea (3.5°S, 143.5°E).</p>
+        <p><strong>Likely Purpose:</strong> Ceremonial necklace worn by tribal leaders or shamans during rituals.</p>
+        <p><strong>Evidence of Use:</strong> Fiber wear and broken binding points suggest regular handling.</p>
+        <p><strong>Manufacture Clues:</strong> Hand-carved shell beads, fishbone separators, organic cord binding.</p>
+      </div>
+      <div class="artifact-col">
+        <p><strong>Found With:</strong> Stone totems, bone flutes, and woven offering baskets.</p>
+        <p><strong>Burial or Habitat Context:</strong> Found atop a sunken coral altar layered in sediment.</p>
+        <p><strong>Symbolism:</strong> Shells and bones arranged in patterns symbolizing life, death, and sea spirits.</p>
+        <p><strong>Comparison:</strong> Resembles early Oceanic tribal adornments from Melanesian culture.</p>
+      </div>
+    </div>
+  </div>
+<div class="artifact-container">
+  <div class="artifact-header">
+    <h3>Abyssal Ceremonial Headdress</h3>
+  </div>
+  <div class="artifact-image">
+    <img src="../images/collections/abyssal-headdress.jpg" alt="An elaborate spiked underwater ceremonial headdress made of shells, bones, and seaweed strands, displayed on a museum stand">
+  </div>
+  <div class="artifact-columns">
+    <div class="artifact-col">
+      <p><strong>Material:</strong> Driftwood base, shark teeth, shells, seaweed fibers, and bone fragments.</p>
+      <p><strong>Size/Weight/Shape:</strong> Crown-shaped, approx. 50 cm tall, 40 cm wide, 3.2 kg.</p>
+      <p><strong>Physical Properties:</strong> Surface combines rough driftwood texture with jagged bone tips and smooth shell accents. The entire piece feels heavy and dampened by mineral 		buildup, with fibrous strands stiffened by saltwater exposure.</p>
+      <p><strong>Estimated Age:</strong> Circa 1000 CE, determined through organic fiber degradation and salt crystallization.</p>
+      <p><strong>Preservation State:</strong> Moderate; some bone elements are brittle but structure remains intact.</p>
+    </div>
+    <div class="artifact-col">
+      <p><strong>Location Found:</strong> Submerged ceremonial chamber near the Solomon Islands (9.6°S, 160.2°E).</p>
+      <p><strong>Likely Purpose:</strong> Worn by tribal leaders or shamans during deep-sea rituals or ancestor invocations.</p>
+      <p><strong>Evidence of Use:</strong> Headband and interior show repeated contact wear; sea salt residue found on binding seams.</p>
+      <p><strong>Manufacture Clues:</strong> Hand-drilled shell placements, sinew lashings, and intentional symbolic arrangements</p>
+    </div>
+    <div class="artifact-col">
+      <p><strong>Found With:</strong> Ritual drums, carved idols, and obsidian shards arranged in a circle.</p>
+      <p><strong>Burial or Habitat Context:</strong> Discovered on a coral pedestal in an underwater cave sanctum with strong tidal currents.</p>
+      <p><strong>Symbolism:</strong> Spikes represent spiritual defense; hanging shells signify communication with the sea realm.</p>
+      <p><strong>Comparison:</strong> Parallels Melanesian war regalia but with additional oceanic spiritual embellishments.</p>
+    </div>
+  </div>
+</div>
+
+</section>
+
+<div class="row">
+  <div class="col" id="footer">
+    <footer>
+      <p><strong>The content on this site was conceived by a human and created by AI. The images were created by AI and curated, edited, reviewed, verified, validated, and augmented by a human.</strong></p>
+    </footer>
+  </div>
+</div>
+
+  <script>
+    function showSection(sectionId) {
+      const sections = document.querySelectorAll('.collection-section');
+      sections.forEach(section => {
+        section.style.display = 'none';
+      });
+      const target = document.getElementById(sectionId);
+      if (target) target.style.display = 'block';
+    }
+  </script>
 </body>
 </html>
