--- a/html/staff.html
+++ b/html/staff.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="author" content="Sakire Ipek Demircan Aktas">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="noindex, nofollow">
   <title>Museum Staff</title>
   <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Tsukimi+Rounded&display=swap" rel="stylesheet">
@@ -18,6 +19,7 @@
             <li><a href="../index.html">Home</a></li>
             <li><a href="staff.html" class="active">Staff</a></li>
             <li><a href="collections.html">Collections</a></li>
+            <li><a href="shop.html">Shop</a></li>
           </ul>
         </nav>
       </div>
