--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="html/staff.html">Staff</a></li>
             <li><a href="html/collections.html">Collections</a></li>
+ 	    <li><a href="html/shop.html">Shop</a></li>
           </ul>
         </nav>
       </div>
