--- a/html/collections.html
+++ b/html/collections.html
@@ -20,6 +20,7 @@
             <li><a href="staff.html">Staff</a></li>
             <li><a href="collections.html" class="active">Collections</a></li>
             <li><a href="shop.html">Shop</a></li>
+            <li><a href="cart.html">View Cart</a></li>
           </ul>
         </nav>
       </div>
@@ -231,15 +232,6 @@
   </div>
 </div>
 </div>
-  <script>
-    function showSection(sectionId) {
-      const sections = document.querySelectorAll('.collection-section');
-      sections.forEach(section => {
-        section.style.display = 'none';
-      });
-      const target = document.getElementById(sectionId);
-      if (target) target.style.display = 'block';
-    }
-  </script>
+  <script src="../js/script.js"></script>
 </body>
 </html>
