--- a/html/shop.html
+++ b/html/shop.html
@@ -17,9 +17,10 @@
         <nav class="site-nav">
           <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="staff.html">Staff</a></li>
-            <li><a href="collections.html">Collections</a></li>
-            <li><a href="shop.html" class="active">Shop</a></li>
+            <li><a href="./staff.html">Staff</a></li>
+            <li><a href="./collections.html">Collections</a></li>
+            <li><a href="./shop.html" class="active">Shop</a></li>
+            <li><a href="./cart.html" id="viewCartBtn">View Cart</a></li>
           </ul>
         </nav>
       </div>
@@ -27,86 +28,152 @@
 
     <h2 class="section-title">Souvenir Shop</h2>
 
-    <div class="artifact-container">
+    <div class="artifact-container souvenir-item">
       <div class="artifact-image">
-        <img src="../images/souvenirs/navigators-disk-replica.png" alt="Replica of Sunken Navigator’s Disk" title="Bronze disk once said to guide deep-sea explorers." onclick="modalImg.src=this.src; modal.style.display='flex'; modalImg.alt=this.alt;">
+        <img src="../images/souvenirs/navigators-disk-replica.png"
+             alt="Replica of Sunken Navigator’s Disk"
+             title="Bronze disk once said to guide deep-sea explorers."
+             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
           <p><strong>ID:</strong> item001</p>
           <p><strong>Description:</strong> Sunken Navigator’s Disk – From the Archaeology Collection, this miniature bronze replica recreates the legendary navigation artifact once used by deep-sea explorers.</p>
           <p><strong>Price:</strong> $19.99</p>
-          <button onclick="addToCart('item001','Sunken Navigator’s Disk')">Add Sunken Navigator’s Disk to Cart</button>
+          <div class="qty-badge" aria-live="polite"></div>
+          <button
+            onclick="addToCart(this)"
+            data-id="item001"
+            data-name="Sunken Navigator’s Disk"
+            data-price="19.99"
+            data-image="../images/souvenirs/navigators-disk-replica.png">
+            Add Sunken Navigator’s Disk to Cart
+          </button>
         </div>
       </div>
     </div>
 
-    <div class="artifact-container">
+    <div class="artifact-container souvenir-item">
       <div class="artifact-image">
-        <img src="../images/souvenirs/ceremonial-trident-replica.png" alt="Replica of Ceremonial Trident Head" title="Symbol of maritime power in ancient rites." onclick="modalImg.src=this.src; modal.style.display='flex'; modalImg.alt=this.alt;">
+        <img src="../images/souvenirs/ceremonial-trident-replica.png"
+             alt="Replica of Ceremonial Trident Head"
+             title="Symbol of maritime power in ancient rites."
+             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
           <p><strong>ID:</strong> item002</p>
           <p><strong>Description:</strong> Ceremonial Trident Head – From the Archaeology Collection, this detailed bronze replica honors the ceremonial weapon believed to symbolize authority in ancient coastal societies.</p>
           <p><strong>Price:</strong> $19.99</p>
-          <button onclick="addToCart('item002','Ceremonial Trident Head')">Add Ceremonial Trident Head to Cart</button>
+          <div class="qty-badge" aria-live="polite"></div>
+          <button
+            onclick="addToCart(this)"
+            data-id="item002"
+            data-name="Ceremonial Trident Head"
+            data-price="19.99"
+            data-image="../images/souvenirs/ceremonial-trident-replica.png">
+            Add Ceremonial Trident Head to Cart
+          </button>
         </div>
       </div>
     </div>
 
-    <div class="artifact-container">
+    <div class="artifact-container souvenir-item">
       <div class="artifact-image">
-        <img src="../images/souvenirs/wavecarved-horn-replica.png" alt="Replica of Wavecarved Horn" title="Ceremonial conch carved to summon sea spirits." onclick="modalImg.src=this.src; modal.style.display='flex'; modalImg.alt=this.alt;">
+        <img src="../images/souvenirs/wavecarved-horn-replica.png"
+             alt="Replica of Wavecarved Horn"
+             title="Ceremonial conch carved to summon sea spirits."
+             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
           <p><strong>ID:</strong> item003</p>
           <p><strong>Description:</strong> Wavecarved Horn of the Depths – From the Archaeology Collection, this small-scale carved conch replica reflects the original’s use in maritime rituals and seafaring ceremonies.</p>
           <p><strong>Price:</strong> $29.99</p>
-          <button onclick="addToCart('item003','Wavecarved Horn of the Depths')">Add Wavecarved Horn of the Depths to Cart</button>
+          <div class="qty-badge" aria-live="polite"></div>
+          <button
+            onclick="addToCart(this)"
+            data-id="item003"
+            data-name="Wavecarved Horn of the Depths"
+            data-price="29.99"
+            data-image="../images/souvenirs/wavecarved-horn-replica.png">
+            Add Wavecarved Horn of the Depths to Cart
+          </button>
         </div>
       </div>
     </div>
 
-    <div class="artifact-container">
+    <div class="artifact-container souvenir-item">
       <div class="artifact-image">
-        <img src="../images/souvenirs/submerged-mask-replica.png" alt="Replica of Ancient Submerged Mask" title="Mask worn in oceanic ancestor ceremonies." onclick="modalImg.src=this.src; modal.style.display='flex'; modalImg.alt=this.alt;">
+        <img src="../images/souvenirs/submerged-mask-replica.png"
+             alt="Replica of Ancient Submerged Mask"
+             title="Mask worn in oceanic ancestor ceremonies."
+             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
           <p><strong>ID:</strong> item004</p>
           <p><strong>Description:</strong> Ancient Submerged Mask – From the Anthropology Collection, this wooden ceremonial mask replica mirrors the original artifact recovered from a submerged ritual site.</p>
           <p><strong>Price:</strong> $24.99</p>
-          <button onclick="addToCart('item004','Ancient Submerged Mask')">Add Ancient Submerged Mask to Cart</button>
+          <div class="qty-badge" aria-live="polite"></div>
+          <button
+            onclick="addToCart(this)"
+            data-id="item004"
+            data-name="Ancient Submerged Mask"
+            data-price="24.99"
+            data-image="../images/souvenirs/submerged-mask-replica.png">
+            Add Ancient Submerged Mask to Cart
+          </button>
         </div>
       </div>
     </div>
 
-    <div class="artifact-container">
+    <div class="artifact-container souvenir-item">
       <div class="artifact-image">
-        <img src="../images/souvenirs/tribal-necklace-replica.png" alt="Replica of Submerged Tribal Necklace" title="Shells and bone for coastal ritual leaders." onclick="modalImg.src=this.src; modal.style.display='flex'; modalImg.alt=this.alt;">
+        <img src="../images/souvenirs/tribal-necklace-replica.png"
+             alt="Replica of Submerged Tribal Necklace"
+             title="Shells and bone for coastal ritual leaders."
+             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
           <p><strong>ID:</strong> item005</p>
           <p><strong>Description:</strong> Submerged Tribal Necklace – From the Anthropology Collection, this handcrafted replica features shells and beads inspired by adornments worn in early coastal cultures.</p>
           <p><strong>Price:</strong> $19.99</p>
-          <button onclick="addToCart('item005','Submerged Tribal Necklace')">Add Submerged Tribal Necklace to Cart</button>
+          <div class="qty-badge" aria-live="polite"></div>
+          <button
+            onclick="addToCart(this)"
+            data-id="item005"
+            data-name="Submerged Tribal Necklace"
+            data-price="19.99"
+            data-image="../images/souvenirs/tribal-necklace-replica.png">
+            Add Submerged Tribal Necklace to Cart
+          </button>
         </div>
       </div>
     </div>
 
-    <div class="artifact-container">
+    <div class="artifact-container souvenir-item">
       <div class="artifact-image">
-        <img src="../images/souvenirs/abyssal-headdress-replica.png" alt="Replica of Abyssal Ceremonial Headdress" title="Headdress believed to protect divers in sacred waters." onclick="modalImg.src=this.src; modal.style.display='flex'; modalImg.alt=this.alt;">
+        <img src="../images/souvenirs/abyssal-headdress-replica.png"
+             alt="Replica of Abyssal Ceremonial Headdress"
+             title="Headdress believed to protect divers in sacred waters."
+             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
           <p><strong>ID:</strong> item006</p>
           <p><strong>Description:</strong> Abyssal Ceremonial Headdress – From the Anthropology Collection, this ornate replica showcases the ceremonial regalia used in deep-sea cultural traditions.</p>
           <p><strong>Price:</strong> $39.99</p>
-          <button onclick="addToCart('item006','Abyssal Ceremonial Headdress')">Add Abyssal Ceremonial Headdress to Cart</button>
+          <div class="qty-badge" aria-live="polite"></div>
+          <button
+            onclick="addToCart(this)"
+            data-id="item006"
+            data-name="Abyssal Ceremonial Headdress"
+            data-price="39.99"
+            data-image="../images/souvenirs/abyssal-headdress-replica.png">
+            Add Abyssal Ceremonial Headdress to Cart
+          </button>
         </div>
       </div>
     </div>
@@ -124,10 +191,6 @@
     </div>
   </div>
 
-  <script>
-    let modal = document.getElementById("modal");
-    let modalImg = document.getElementById("modalImg");
-    function addToCart(id, name){ alert(`Added ${name} (${id}) to cart`); }
-  </script>
+ <script src="../js/script.js"></script>
 </body>
 </html>
