--- a/html/staff.html
+++ b/html/staff.html
@@ -20,6 +20,7 @@
             <li><a href="staff.html" class="active">Staff</a></li>
             <li><a href="collections.html">Collections</a></li>
             <li><a href="shop.html">Shop</a></li>
+            <li><a href="cart.html">View Cart</a></li>
           </ul>
         </nav>
       </div>
