--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="html/staff.html">Staff</a></li>
             <li><a href="html/collections.html">Collections</a></li>
  	    <li><a href="html/shop.html">Shop</a></li>
+            <li><a href="html/cart.html">View Cart</a></li>
           </ul>
         </nav>
       </div>
