--- a/html/shop.html
+++ b/html/shop.html
@@ -33,7 +33,7 @@
         <img src="../images/souvenirs/navigators-disk-replica.png"
              alt="Replica of Sunken Navigator’s Disk"
              title="Bronze disk once said to guide deep-sea explorers."
-             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
+             class="shop-modal-image">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
@@ -58,7 +58,7 @@
         <img src="../images/souvenirs/ceremonial-trident-replica.png"
              alt="Replica of Ceremonial Trident Head"
              title="Symbol of maritime power in ancient rites."
-             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
+             class="shop-modal-image">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
@@ -83,7 +83,7 @@
         <img src="../images/souvenirs/wavecarved-horn-replica.png"
              alt="Replica of Wavecarved Horn"
              title="Ceremonial conch carved to summon sea spirits."
-             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
+             class="shop-modal-image">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
@@ -108,7 +108,7 @@
         <img src="../images/souvenirs/submerged-mask-replica.png"
              alt="Replica of Ancient Submerged Mask"
              title="Mask worn in oceanic ancestor ceremonies."
-             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
+             class="shop-modal-image">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
@@ -133,7 +133,7 @@
         <img src="../images/souvenirs/tribal-necklace-replica.png"
              alt="Replica of Submerged Tribal Necklace"
              title="Shells and bone for coastal ritual leaders."
-             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
+             class="shop-modal-image">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
@@ -158,7 +158,7 @@
         <img src="../images/souvenirs/abyssal-headdress-replica.png"
              alt="Replica of Abyssal Ceremonial Headdress"
              title="Headdress believed to protect divers in sacred waters."
-             onclick="modalImg.src=this.src; modalImg.alt=this.alt; modal.style.display='flex';">
+             class="shop-modal-image">
       </div>
       <div class="artifact-columns">
         <div class="artifact-col">
